--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "timer-blah"
+name = "tiny-timer"
 version = "0.1.0"
 edition = "2021"
-repository = "https://github.com/n1ghtmare/timer-blah"
-documentation = "https://github.com/n1ghtmare/timer-blah"
+repository = "https://github.com/n1ghtmare/tiny-timer"
+documentation = "https://github.com/n1ghtmare/tiny-timer"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
+description = "A simple and tiny CLI timer"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
